Seprate - mobile navigation Fix - sidebar padding on mobile Fix - z index issue with sidebar Fix - link color effecting meta links

--- a/assets/sass/responsive/_admin-bar.scss
+++ b/assets/sass/responsive/_admin-bar.scss
@@ -65,6 +65,12 @@ body.admin-bar {
 			}
 		}
 
+		.header-sticky {
+			.header-inner-wrapper {
+				top: 42px;
+			}
+		}
+
 	}
 }
 
